...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="zhN-Oi-xin">
                                <rect key="frame" x="20" y="0.0" width="374" height="687"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="recell" textLabel="HCA-cJ-gVa" detailTextLabel="yTs-Vi-UHK" style="IBUITableViewCellStyleSubtitle" id="ASf-Nh-MDz" customClass="CustomCell" customModule="MyJournal" customModuleProvider="ta
                                        <rect key="frame" x="0.0" y="56" width="374" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ASf-Nh-MDz" id="lJ1-pd-bug">
                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HCA-cJ-gVa">
                                                    <rect key="frame" x="15" y="4" width="34" height="21"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                            <constraint firstAttribute="trailing" secondItem="zhN-Oi-xin" secondAttribute="trailing" constant="20" id="PcL-aW-Exa"/>
                            <constraint firstItem="zhN-Oi-xin" firstAttribute="top" secondItem="oEo-y1-tsB" secondAttribute="top" id="cdZ-ay-jtp"/>
                            <constraint firstItem="sXh-kg-n5c" firstAttribute="top" secondItem="zhN-Oi-xin" secondAttribute="bottom" id="fCR-i6-lw3"/>
                            <constraint firstItem="zhN-Oi-xin" firstAttribute="leading" secondItem="oEo-y1-tsB" secondAttribute="leading" constant="20" id="naF-vO-Ja1"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Main" id="nLu-la-HUD">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Zkp-cp-aCh">
                            <connections>
                                <segue destination="BYZ-38-t0r" kind="show" id="iJS-me-IPs"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
